--- a/templates/test2.html
+++ b/templates/test2.html
@@ -22,21 +22,17 @@ a:hover, a:active {
 
 
 
-<h2>your Meeting Topic are : </h2>
+
+<h2>your recorde result are : </h2>
 <p>{{spoken_text}}</p>
+
 {% for link in links %}
 <a href="{{ link }}">{{ link }}</a>
 {% endfor %}
 
 
 
-
-
-<br>
-<br>
-<br>
-
-<a href="{% url 'speech_recognition:voice_recorde_result' %}" target="_blank">fetch Recorde resulte </a>
+<a href="{% url 'speech_recognition:voice_recorder_HomePage' %}" target="_blank">New Recorde </a>
 
 
 
