--- a/templates/voice.html
+++ b/templates/voice.html
@@ -13,6 +13,21 @@
   margin: 4px 2px;
   cursor: pointer;
 }
+table {
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+td, th {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
+}
+
+tr:nth-child(even) {
+  background-color: #dddddd;
+}
 
 .button1 {background-color: #4CAF50;} /* Green */
 .button2 {background-color: orangered;} /* orange read */
@@ -31,7 +46,7 @@
 
 <h1>Start with recording your voice </h1>
 
-<form action="voice_topic_result">
+<form action="voice_recorde_result">
       {% csrf_token %}
 
   <p>Please select your language:</p>
@@ -41,6 +56,26 @@
   <label for="Deutsch">Deutsch</label><br>
     <input type="number" name="Duration" required>
  <input class="button button2" type="submit" value="Submit">start recording </input>
+
+<h2>your recorde result are : </h2>
+<p>{{spoken_text}}</p>
+
+
+<table class="table">
+    <thead class="thead-dark">
+
+    <tr>
+        <th>Link</th>
+    </tr>
+     <tr>{% for link in links %}
+    <td><a href="{{ link }}">{{ link }}</a></td>
+  </tr>
+{% endfor %}
+
+
+
+<a href="{% url 'speech_recognition:voice_recorder_HomePage' %}" target="_blank">New Recorde </a>
+
 
 </form>
 </body>
