--- a/templates/test.html
+++ b/templates/test.html
@@ -26,6 +26,7 @@ a:hover, a:active {
 <p>{{spoken_text}}</p>
 {% for link in links %}
 <a href="{{ link }}">{{ link }}</a>
+    <br>
 {% endfor %}
 
 
@@ -36,7 +37,7 @@ a:hover, a:active {
 <br>
 <br>
 
-<a href="{% url 'speech_recognition:voice_recorde_result' %}" target="_blank">fetch Recorde resulte </a>
+<a href="{% url 'speech_recognition:voice_recorde_result' %}" target="_blank">fetch Recorde result </a>
 
 
 
