--- a/templates/test.html
+++ b/templates/test.html
@@ -26,7 +26,6 @@ a:hover, a:active {
 <p>{{spoken_text}}</p>
 {% for link in links %}
 <a href="{{ link }}">{{ link }}</a>
-    <br>
 {% endfor %}
 
 
@@ -37,7 +36,7 @@ a:hover, a:active {
 <br>
 <br>
 
-<a href="{% url 'speech_recognition:voice_recorde_result' %}" target="_blank">fetch Recorde result </a>
+<a href="{% url 'speech_recognition:voice_recorde_result' %}" target="_blank">fetch Recorde resulte </a>
 
 
 
