--- a/templates/voice.html
+++ b/templates/voice.html
@@ -61,13 +61,15 @@ tr:nth-child(even) {
 <p>{{spoken_text}}</p>
 
 
+<table class="table">
+    <thead class="thead-dark">
 
-
+    <tr>
         <th>Link</th>
-
-   {% for link in links %}
-       <a href="{{ link }}">{{ link }}</a>
-
+    </tr>
+     <tr>{% for link in links %}
+    <td><a href="{{ link }}">{{ link }}</a></td>
+  </tr>
 {% endfor %}
 
 
